--- a/themes/hugrid/layouts/partials/head.html
+++ b/themes/hugrid/layouts/partials/head.html
@@ -13,9 +13,9 @@
 		color: {{ .Site.Params.bodytextcolor }};
 		}
 		</style>
-		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/default.css" />
-		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/component.css" />
+		<link rel="stylesheet" type="text/css" href="{{ "css/default.css" | absURL }}" />
+		<link rel="stylesheet" type="text/css" href="{{ "css/component.css" | absURL }}" />
 		{{ range .Site.Params.custom_css }}
 			<link rel="stylesheet" href="{{ . }}">
 		{{ end }}
-		<script src="{{ .Site.BaseURL }}js/modernizr.custom.js"></script>
+		<script src="{{ "js/modernizr.custom.js" | absURL }}"></script> 
